--- a/portfolio-landing-page/css/styles.css
+++ b/portfolio-landing-page/css/styles.css
@@ -1,11 +1,51 @@
-img {
-  position: absolute;
-  clip: rect(0px,400px,400px,0px);
+.main {
+  width: 60%;
+  height: 60%;
+  padding: 6px;
+  margin-left: 200px;
+  margin-right: 200px;
+  border: 4px solid green;
+  text-align: center;
 }
+.second {
+  float: right;
+  width: 35%;
+  height: 35%;
+  padding: 6px;
+  margin; 14px;
+  border: 4px solid red;
+}
+
 .love {
   text-decoration: underline;
   color: red;
   font-family: cursive;
   font-size: 16;
   font-weight: bold;
+}
+
+body {
+  background-color: #006633;
+}
+
+p {
+  padding: 6px;
+  margin; 14px;
+  border: 4px solid blue;
+  background-color; yellow;
+}
+
+h1 {
+  text-align: center;
+}
+
+h2 {
+  text-align: left;
+}
+
+.hobbies {
+  text-align: left;
+  padding: 12px;
+  margin; 14px;
+  border: 4px solid green;
 }
